# LLCCEP

./: .gitignore  README.md
JIT/: .1.out.swp  JIT.pro  (+9 more)
JIT/instruction_manager/: CMakeLists.txt  instruction_manager.cpp  instruction_manager.hpp  test.cpp
JIT/program/: .program.cpp.swp  .program.hpp.swo  .program.hpp.swp  1.hexdump  CMakeCache.txt  CMakeLists.txt  Makefile  dump  dump2  program.cpp  program.hpp  program.hpp.autosave  program_unit_test  test.cpp
JIT/program/tests/: 1  1.asm  2  2.asm
JIT/startup/: CMakeLists.txt  program.hpp  startup.cpp  startup.hpp  test.cpp
SiHi/: .SiHi.l.swo  .SiHi.l.swp  .SiHi.y.swp  .SiHi_parser.hpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SiHi.l  SiHi.y  SiHiCompiler  SiHiLexer.cpp  SiHiParser.cpp  SiHiParser.hpp  SiHiScanner.cpp  SiHi_lexer.c  SiHi_lexer.cpp  SiHi_parser.h  SiHi_parser.hpp  lit.txt  main.cpp  out.ast  test.sihi  yyltype.h
SiHi/SiHi_lexer.o.dSYM/Contents/: Info.plist
SiHi/ast/: .ast.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  ast.cpp  ast.h  ast.hpp  ast_unit_test  dump.cpp  dump.hpp  node_types.hpp  test.cpp
SiHi/backend/: .backend.cpp.swp  .backend.hpp.swp  backend.cpp  backend.hpp
SiHi/backend/class/: class.cpp  class.hpp
SiHi/backend/context/: context.cpp  context.hpp
SiHi/backend/variableDeclaration/: variableDeclaration.cpp  variableDeclaration.hpp
SiHi/codegenSample/: sample0.txt
SiHi/lexem/: lexem.cpp  lexem.hpp
SiHi/libSiHi/src/: abi.asm  math.asm
SiPy/parser/: CMakeLists.txt  parser.cpp  parser.hpp  precedence.cpp  precedence.hpp  test.cpp
assembler/: .assembly.y.swp  .demo1.asm.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.exec  assembler  assembly.l  assembly.y  cmake_install.cmake  main.cpp
assembler/analysis/: .analysis.cpp.swp  .analysis.hpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  analysis.cpp  analysis.hpp  asm_analysis  test.cpp
assembler/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  analyzerUnitTest.cpp
assembler/builderInfo/: builderInfo.hpp
assembler/codegen/: .codegen.cpp.swp  .codegen.hpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  codeGeneratorUnitTest  codegen.cpp  codegen.hpp  codegenUnitTest.cpp  test.cpp
assembler/compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp  compilerUnitTest.cpp
assembler/declaration/: declaration.cpp  declaration.hpp
assembler/def/: def_cond.hpp  def_inst.hpp
assembler/demo/: demo1.asm  demo1.asm.hex  demo1.hex  demo1.s  demo2.asm  demo3.asm  demoJIT.asm  demo_con.asm
assembler/include/tools/check/: name.hpp  regmatch.hpp
assembler/instructionCompiler/: instructionCompiler.cpp  instructionCompiler.hpp
assembler/lexer/: 1.asm  CMakeCache.txt  CMakeLists.txt  lexer.cpp  lexer.hpp  lexerUnitTest.cpp  test.cpp
assembler/lib/tools/check/: name.hpp  regmatch.cpp
assembler/libAsm/: add.s  call.s  sub.s
assembler/linker/: CMakeLists.txt  linker.cpp  linker.hpp  linkerUnitTest.cpp  test.cpp
assembler/preprocessor/: CMakeCache.txt  CMakeLists.txt  Makefile  preprocessor.cpp  preprocessor.hpp  preprocessorUnitTest  preprocessorUnitTest.cpp
assembler/section/: .section.hpp.swp  section.cpp  section.hpp
assembler/statement/: statement.cpp  statement.hpp
assembler/statement/instruction/: instruction.cpp  instruction.hpp
assembler/statement/instruction/argument/: argument.cpp  arguments.hpp
assembler/statement/label/: label.cpp  label.hpp
common/ast/: CMakeLists.txt  ast.cpp  ast.hpp  astDump  astUnitTest.cpp
disassembler/: CMakeLists.txt  main.cpp
disassembler/def/: def_cond.hpp  def_inst.hpp
disassembler/disassembler/: disassembler.cpp  disassembler.hpp
disassembler/reader/: CMakeLists.txt  reader.cpp  reader.hpp  test.cpp
disassembler/writer/: writer.cpp  writer.hpp
exec/drivers/display/: CMakeLists.txt  Test QT Display.pro  display.cpp  display.hpp  test.cpp
exec/emu/: .a.exec.swp  1.exec  CMakeCache.txt  CMakeLists.txt  Makefile  emu  main.cpp  test.asm
exec/vm/: 1.exec  CMakeCache.txt  CMakeLists.txt  Makefile  VM  main.cpp  tags  test.cfg
executor/: CMakeLists.txt  emulator.pro  main.cpp
executor/Android/executor/app/: build.gradle
executor/Android/executor/app/src/main/: AndroidManifest.xml
executor/Android/executor/app/src/main/res/layout/: activity_selection.xml
executor/Linux-Mac-Win/emulation/: emulation.hpp
executor/Linux-Mac-Win/loader/: loader.cpp
executor/Linux-Mac-Win/window/: window.cpp
executor/codeReader/: .program.cpp.swp  codeReader.cpp  codeReader.hpp
executor/emulation/: emulation.cpp  emulation.hpp
executor/iOS/Executor/Executor/: AppDelegate.swift  File.swift  Info.plist  Loader.swift  ViewController.swift
executor/iOS/Executor/Executor.xcodeproj/: project.pbxproj
executor/iOS/Executor/Executor.xcodeproj/project.xcworkspace/xcshareddata/: Executor.xccheckout
executor/iOS/Executor/Executor.xcodeproj/project.xcworkspace/xcuserdata/andrew.xcuserdatad/: UserInterfaceState.xcuserstate
executor/iOS/Executor/Executor.xcodeproj/xcuserdata/andrew.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
executor/iOS/Executor/Executor.xcodeproj/xcuserdata/andrew.xcuserdatad/xcschemes/: Executor.xcscheme  xcschememanagement.plist
executor/iOS/Executor/Executor/Base.lproj/: LaunchScreen.xib
executor/iOS/Executor/Executor/Executor.xcdatamodeld/: .xccurrentversion
executor/iOS/Executor/ExecutorTests/: ExecutorTests.swift  Info.plist
executor/loader/: loader.cpp  loader.hpp
executor/messageBox/: messageBox.cpp  messageBox.hpp
executor/mm/: mm.cpp  mm.hpp
executor/signal/: signal.hpp
executor/softcore/: .softcore.cpp.swp  softcore.cpp  softcore.hpp
executor/window/: window.cpp  window.hpp
test/: CMakeLists.txt  STD_ext.cpp
tests/autoReleasePointer/: CMakeLists.txt  autoReleasePointerUnitTest.cpp
tests/reinterpret_value/: CMakeLists.txt  reinterpretValueUnitTest.cpp
vm/conf/: .Makefile.swp  CMakeLists.txt  Makefile  README.md  conf.cpp  conf.hpp  example_configuration.lcp_conf  lexer.h  parser.h  reader.c  reader.h  section.c  section.h  test.c  test.cfg  test.cpp  vm_conf.l  vm_conf.y
(+190 files in other folders)
