cmake_minimum_required(VERSION 2.6)
project(LLCCEP_assembler)

set(BUILD_MODE "Debug" CACHE STRING "Do you want to build assembler for debug")
set(CMAKE_CXX_FLAGS "-std=gnu++11")

if(BUILD_MODE STREQUAL "Debug")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Debug/lib")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Debug/lib")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Debug/bin")
elseif(BUILD_MODE STREQUAL "Release")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -flto -funroll-loops -march=native")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Release/lib")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Release/lib")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Release/bin")
else()	
	message(SEND_ERROR "BUILD_MODE is not 'Debug' or 'Release'.")
endif()

include_directories("${CMAKE_SOURCE_DIR}/../include/")

add_library(lexer "${CMAKE_SOURCE_DIR}/lexer/lexer.cpp")
add_library(analyzer "${CMAKE_SOURCE_DIR}/analyzer/analyzer.cpp")
add_library(codegen "${CMAKE_SOURCE_DIR}/codegen/codegen.cpp")
add_library(compiler "${CMAKE_SOURCE_DIR}/compiler/compiler.cpp")
add_library(linker "${CMAKE_SOURCE_DIR}/linker/linker.cpp")
add_library(preprocessor "${CMAKE_SOURCE_DIR}/preprocessor/preprocessor.cpp")
add_library(STDExtras "${CMAKE_SOURCE_DIR}/../lib/STDExtras.cpp")
add_library(commandLine "${CMAKE_SOURCE_DIR}/../lib/command-line.cpp")
target_link_libraries(lexer STDExtras)
target_link_libraries(analyzer lexer STDExtras)
target_link_libraries(linker STDExtras)
target_link_libraries(preprocessor STDExtras)
target_link_libraries(codegen STDExtras linker lexer analyzer)
target_link_libraries(compiler lexer analyzer codegen linker preprocessor)
target_link_libraries(commandLine STDExtras)

add_executable(LLCCEP_assembler "${CMAKE_SOURCE_DIR}/main.cpp")
target_link_libraries(LLCCEP_assembler lexer analyzer linker codegen 
	              commandLine compiler STDExtras)
